Closed Bug 1675651 Opened 5 years ago Closed 1 year ago

Cursor blinks when on movement and key is pressed

Categories

(Core :: Widget: Cocoa, defect, P3)

Firefox 81
Unspecified
macOS
defect

Tracking

()

VERIFIED FIXED
133 Branch
Tracking Status
firefox133 --- verified
firefox134 --- verified

People

(Reporter: samuelmtimbo, Assigned: spohl)

References

(Regressed 1 open bug)

Details

Attachments

(2 files)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.183 Safari/537.36

Steps to reproduce:

Hold any character key (such as "a") and move the mouse.

Actual results:

The mouse cursor blinks every time it is moved, causing unnecessary visual flicker.

Expected results:

The cursor should not get hidden when no textbox (input/textarea/etc.) field is focused.

I understand it is expected the cursor will be automatically hidden when a textbox is focused and a key is pressed, however, when there is no focused textbox, it should remain visible. This becomes more problematic in when the user is expected to move the mouse while holding a key (such as "w", "a", "s", "d").

This is a Firefox only issue. I confirm it is working on Chrome and Safari (on MacOS).

Summary: Cursor blinks when on movement when key is pressed → Cursor blinks when on movement and key is pressed
Component: Untriaged → Widget: Cocoa
OS: Unspecified → macOS
Product: Firefox → Core
Severity: -- → S3
Status: UNCONFIRMED → NEW
Ever confirmed: true
Priority: -- → P3
See Also: → 1658226

Expected results:

The cursor should not get hidden when no textbox (input/textarea/etc.) field is focused.

I'm not so sure this is the expected behavior.

As long as I can remember, Firefox has hidden the mouse cursor upon keyboard events, no matter where the focus is. I have assumed this is intentional.

Personally I really like the fact that the cursor gets out of the way when I navigate or interact with a page using the keyboard.

In my testing, the cursor does not flicker as long as the mouse movement is continuous. So, one way to mitigate the issue would be to refrain from hiding the cursor when the key being pressed has been down since the previous mouse movement.

Assignee: nobody → spohl.mozilla.bugs
Status: NEW → ASSIGNED
Pushed by spohl@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b01f524dfd00 Avoid hiding the cursor on macOS unless we are dealing with editable content, or the Cmd key is pressed. r=masayuki

(In reply to bintoro from comment #1)

one way to mitigate the issue would be to refrain from hiding the cursor when the key being pressed has been down since the previous mouse movement.

This wasn't a feasible approach?

I always thought that hiding the cursor while scrolling a page via the keyboard was by design. Is there no way to preserve that behaviour while accomplishing what the reporter is requesting, such as excepting the navigation keys and the space bar?

Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 133 Branch

(In reply to bintoro from comment #4)

(In reply to bintoro from comment #1)

one way to mitigate the issue would be to refrain from hiding the cursor when the key being pressed has been down since the previous mouse movement.

This wasn't a feasible approach?

I meant to address your earlier comment but now realize that I never submitted my comment. The reason why this isn't feasible (or at least not quite as easily as stated) is that there is no guarantee of the sequence that you mention. We have been informed of web apps that specifically expect mouse movements along with key presses. In this case, there may be mouse movements in between key presses. Even ignoring this, with your suggestion, we would need to detect a first key press and only hide the cursor on subsequent key press events, assuming there had not been any mouse move events in between. If you used the space bar to scroll, we expect that you would only have pressed it once, which would not have resulted in the cursor being hidden.

I always thought that hiding the cursor while scrolling a page via the keyboard was by design. Is there no way to preserve that behaviour while accomplishing what the reporter is requesting, such as excepting the navigation keys and the space bar?

We could consider re-enabling this for certain keys, with the caveat that we may not be able to do so without breaking the mentioned web apps again. I'm assuming that you are using the arrow keys and/or space bar to scroll? Please feel free to open a separate bug for further discussion.

QA Whiteboard: [qa-133b-p2]
Regressions: 1927928

Reproducible on a 2024-10-15 Nightly build on macOS 14.
Verified as fixed on Firefox Nightly 134.0a1 and Firefox 133.0 on macOS 14.

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-133b-p2]
Regressions: 1934473
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: