Bug 1675651: Avoid hiding the cursor on macOS unless we are dealing with editable content, or the Cmd key is pressed. r=masayuki

Differential Revision: https://phabricator.services.mozilla.com/D225869